Potential fix to disappearing hamburger button on iPhone; changed events divs to avoid overflow

--- a/styles-home.css
+++ b/styles-home.css
@@ -4,7 +4,8 @@
 
 .events {
   width : 100%;
-  height : 20vh;
+  /* height : 20vh; */
+  height : fit-content;
   background-color : blue;
   display : flex;
   align-items : center;
@@ -12,9 +13,10 @@
 }
 
 .events > a {
+    font-size : clamp(1rem,5vw,2rem);
     margin : auto;
-    font-size: 2em;
     text-align : center;
+    padding : 40px;
 }
 
 #kuvia {
